# ray

./: .gitignore  CMakeLists.txt  README.md
cmake/: SDL2Config.cmake
include/raycore/: Camera.hpp  Instance.hpp  Intersection.hpp  Scene.hpp
include/raycore/Components/: IntersectionInvoker.hpp  Transform.hpp
include/raycore/Math/: CommonFunc.hpp  Constants.hpp  Random.hpp  Ray.hpp  Vec3.hpp
include/raycore/Object/: GroundPlane.hpp  Mesh.hpp  Sphere.hpp
include/raycore/Utils/: ImageIO.hpp  VertexBuffer.hpp
src/ray/: CMakeLists.txt  Main.cpp
src/raycore/: CMakeLists.txt  Camera.cpp  Instance.cpp  PrecompiledHeader.hpp  Scene.cpp
src/raycore/Math/: Random.cpp
src/raycore/Object/: GroundPlane.cpp  Sphere.cpp
src/raycore/Utils/: ImageIO.cpp  StbStub.cpp  StbStub.hpp
